--- a/aws/src/handlers/package.json
+++ b/aws/src/handlers/package.json
@@ -4,12 +4,12 @@
   "description": "Node.js Lambda handlers for Dogotel backend",
   "main": "index.js",
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.0.0",
-    "@aws-sdk/lib-dynamodb": "^3.0.0",
-    "@aws-sdk/client-s3": "^3.0.0",
-    "@aws-sdk/client-sqs": "^3.0.0",
-    "@aws-sdk/client-cognito-identity-provider": "^3.0.0",
-    "uuid": "^9.0.0"
+    "@aws-sdk/client-dynamodb": "3.490.0",
+    "@aws-sdk/lib-dynamodb": "3.490.0",
+    "@aws-sdk/client-s3": "3.490.0",
+    "@aws-sdk/client-sqs": "3.490.0",
+    "@aws-sdk/client-cognito-identity-provider": "3.490.0",
+    "uuid": "9.0.1"
   },
   "engines": {
     "node": ">=18.0.0"
