--- a/aws/src/handlers/package.json
+++ b/aws/src/handlers/package.json
@@ -9,6 +9,7 @@
     "@aws-sdk/client-s3": "3.490.0",
     "@aws-sdk/client-sqs": "3.490.0",
     "@aws-sdk/client-cognito-identity-provider": "3.490.0",
+    "@aws-sdk/client-rekognition": "3.490.0",
     "uuid": "9.0.1"
   },
   "engines": {
